# tekel

./: .codecov.yml  .coveragerc  .gitattributes  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.ci_scripts/: push_doc.sh
.circleci/: config.yml
doc/: Makefile  api.html  genindex.html  index.html  make.bat  objects.inv  search.html  searchindex.js
doc/_sources/: api.rst.txt
doc/_sources/auto_examples/: index.rst.txt
doc/_static/: documentation_options.js
doc/auto_examples/: index.html
doc/source/: conf.py  index.rst
doc/source/_templates/: layout.html
doc/source/auto_examples/: index.rst  searchindex.bak
requirements/: doc.txt  examples.txt  full.txt  minimal.txt  tests.txt
tekel/: __init__.py  environment.py  tf_scoped_cache.py  tf_summaries.py  utils.py
tests/: __init__.py  test_environment.py  test_tekel.py  test_tf_scoped_cache.py  test_tf_summaries.py  test_utils.py
