[metadata]
description-file = README.rst

[aliases]
# python2.7 has upgraded unittest and it is no longer compatible with some
# of our tests, so we run all through nose
test = py.test

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
norecursedirs =
    .git
    .tox
    .env
    venv
    dist
    build
    south_migrations
    migrations
    example
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --ignore=setup.py
    --doctest-glob=\*.rst
    --ignore=.eggs
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    if 0:
    if __name__ == .__main__.:

[flake8]
# Default flake8 3.5 ignored flags
ignore=E121,E123,E126,E226,E24,E704,W503,W504
